--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -41,9 +41,9 @@
         </div>
         <!--  -->
     </section>
-    <section class="content" style="">
+    <section class="content" style="padding-bottom:50px">
         <h4 class="content_header">My Dashboard</h4>
-        <div class="boxs">
+        <div class="boxs" style="grid-gap: 20px;">
             <a href="/digitalauditionplatform">
                 <div class="box">
                     <img src="/assest/OLIVE/Group-1.png">
