--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -9,11 +9,10 @@
                     <img src="/assest/OLIVE/woman.png" />
                 </div>
                 <div class="swiper-slide">
-                    <img style="height: 452px; width: 414px;object-fit: cover;" src="/assest/OLIVE/guy.png" />
+                    <img height="452px" width="100%" src="/assest/OLIVE/ankara-nice.jpeg" />
                 </div>
-
                 <div class="swiper-slide">
-                    <img src="/assest/OLIVE/ankara.png" />
+                    <img style="height: 452px; width: 414px;object-fit: cover;" src="/assest/OLIVE/guy.png" />
                 </div>
 
                 <div class="swiper-slide">
