--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,6 +43,9 @@
                         <img src="/assest/OLIVE/woman.png" />
                     </div>
                     <div class="swiper-slide">
+                        <img height="452px" width="100%" src="/assest/OLIVE/ankara-nice.jpeg" />
+                    </div>
+                    <div class="swiper-slide">
                         <img src="/assest/OLIVE/ankara.png" />
                     </div>
                     <div class="swiper-slide">
