--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -9,16 +9,35 @@
                     <img src="/assest/OLIVE/woman.png" />
                 </div>
                 <div class="swiper-slide">
+                    <img src="/assest/OLIVE/cameraman.png" style="height: 452px; width: 414px;object-fit: cover;" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="/assest/OLIVE/sitting.png" style="height: 450px; width: 414px;object-fit: cover;" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="/assest/OLIVE/painter.png" style="height: 452px; width: 414px;object-fit: cover;" />
+                </div>
+                <div class="swiper-slide">
                     <img height="452px" width="100%" src="/assest/OLIVE/ankara-nice.jpeg" />
                 </div>
                 <div class="swiper-slide">
-                    <img style="height: 452px; width: 414px;object-fit: cover;" src="/assest/OLIVE/guy.png" />
+                    <img src="/assest/OLIVE/models.png" style="height: 452px; width: 414px;object-fit: cover;" />
                 </div>
-
+                <div class="swiper-slide">
+                    <img src="/assest/OLIVE/makeup.png" style="height: 452px; width: 414px;object-fit: cover;" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="/assest/OLIVE/guyandgirl.png" style="height: 452px; width: 414px;object-fit: cover;" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="/assest/OLIVE/videographer.png" style="height: 452px; width: 414px;object-fit: cover;" />
+                </div>
                 <div class="swiper-slide">
                     <img src="/assest/OLIVE/flowergirl.png" />
                 </div>
-
+                <!-- <div class="swiper-slide">
+                    <img style="height: 452px; width: 414px;object-fit: cover;" src="/assest/OLIVE/guy.png" />
+                </div> -->
             </div>
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
