--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -27,6 +27,23 @@
         // },
     });
 </script>
+<script defer>
+    const home = document.querySelector('.home');
+    if (home) {
+        const navlink = document.querySelector('.navlink');
+        home.addEventListener('click', () => {
+            navlink.classList.toggle('shownav');
+            if (navlink.classList.contains('shownav')) {
+                home.querySelector("img").src = '/assest/OLIVE/close.png';
+            } else {
+                home.querySelector("img").src = '/assest/OLIVE/dashboard.png';
+            }
+        });
+
+    }
+
+
+</script>
 </body>
 
 </html>
