--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,11 +30,14 @@
     <!-- <script src="https://api.ravepay.co/flwv3-pug/getpaidx/api/flwpbf-inline.js"></script> -->
 
 
+
+
+
 </head>
 
 <body>
     <div class="container">
-        <header>
+        <header style="">
             <div class="logo">
                 <a href="/dashboard">
 
@@ -43,14 +46,22 @@
             </div>
             <div class="icon">
                 <div class="user">
-                    <a href="/profile">
-                        <img class="" src="/assest/OLIVE/usergold.png" alt="" srcset="">
-                    </a>
+                    <!-- <a href="/profile">
+                        <img class="imgicon" src="/assest/OLIVE/usergold.png" alt="" srcset="">
+                    </a> -->
                 </div>
-                <a href="/dashboard">
+                <div style="color: green;" id="nav">
                     <div class="home">
-                        <img src="/assest/OLIVE/dashboard.png" alt="" srcset="">
+                        <img class="menubar" src="/assest/OLIVE/dashboard.png" alt="" srcset="">
                     </div>
-                </a>
+                </div>
+
+            </div>
+            <div class="navlink">
+                <a href="/profile">profile</a>|
+                <a href="/dashboard">dasboard</a>|
+                <a href="/digitalauditionplatform">digitalauditionplatform</a>|
+                <a href="/logout">logout</a>
+
             </div>
         </header>
