--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,6 +17,9 @@
                     <img src="/assest/OLIVE/painter.png" style="height: 452px; width: 414px;object-fit: cover;" />
                 </div>
                 <div class="swiper-slide">
+                    <img height="452px" width="100%" src="/assest/OLIVE/ankara-nice.jpeg" />
+                </div>
+                <div class="swiper-slide">
                     <img src="/assest/OLIVE/models.png" style="height: 452px; width: 414px;object-fit: cover;" />
                 </div>
                 <div class="swiper-slide">
