--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -245,7 +245,7 @@
 
 
         <div class="" style="background-color: #000;" style="margin-top: 7px;height: 7vh; ">
-            <div class="footer_social" style="margin: 0px;padding: 10px;">
+            <div class="footer_social" style="margin: 0px;padding-bottom: 15px;">
                 <div>
                     <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
                 </div>
