--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -90,7 +90,7 @@
     </section>
     <section class="content">
 
-        <h4 class="content_header">Auditions Available</h4>
+        <h4 class="content_header">Available Auditions</h4>
 
         <div class="boxs" style="grid-gap: 0px;">
             <% if (auditions) { %>
