--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,10 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="/assest/OLIVE/logo.png" alt="">
+                <a href="/">
+
+                    <img src="/assest/OLIVE/logo.png" alt="">
+                </a>
             </div>
             <div class="icon">
 
