--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -136,7 +136,7 @@
                                 btn.innerHTML = 'Go to login';
                                 btn.disabled = false;
                                 btn.addEventListener('click', () => {
-                                    window.location.href = '/login';
+                                    window.location.href = '/';
                                 })
                             } else {
                                 p1.value = '';
