--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -235,6 +235,7 @@ header{
     justify-content: space-around;
     padding:0px 20px;
     gap: 20px;
+    width: 100%;
 }
 .content_header{
     font-family: lato;
@@ -261,7 +262,7 @@ color: #ddd;
     font-weight: 400;
     padding:0 .3em;
     box-sizing: border-box;
-    
+    width: 100%;
     margin: 0 auto;
     font-size: 14px;
     color: #ddd;
@@ -790,6 +791,18 @@ gap: 30px;
     
 }
 @media screen and (max-width:350px) {
+    .container{
+        width: 340px;
+
+    }
+    header{
+        width: auto;
+        justify-content: space-around;
+    }
+    .boxs{
+      grid-gap: 15px;
+    }
+    
     .container{
         width: 300px;
     }
