--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -774,6 +774,16 @@ gap: 30px;
     margin: 0 auto;
 }
 
+@media screen and (max-width:390px){
+    .register_link{
+        width: 350px;
+        
+    }
+    .number{
+        width: 300px;
+    }
+}
+    
 
 /* media query */
 @media screen and (max-width:400px) {
@@ -802,7 +812,7 @@ gap: 30px;
     .boxs{
       grid-gap: 15px;
     }
-    
+
     .container{
         width: 300px;
     }
