--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -779,8 +779,8 @@ gap: 30px;
         width: 350px;
         
     }
-    .number{
-        width: 300px;
+    .number img{
+        width: 100px;
     }
 }
     
