--- a/views/login.ejs
+++ b/views/login.ejs
@@ -149,7 +149,7 @@
                 <div class="number">
                     <!-- <label for="password">Password</label> -->
                     <div style="display: flex; gap: 10px;margin-left: 5px;">
-                        <img src="/assest/OLIVE/lock.png" alt="" srcset="">
+                        <img class="lock" src="/assest/OLIVE/lock.png" alt="" srcset="">
                         <input type="password" id="password" required name="password" placeholder="password">
                     </div>
                     <img src="/assest/OLIVE/Line 2.png" alt="">
